# character_guessing

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yaml
config/: Cargo.toml
config/src/: error.rs  lib.rs
database/: Cargo.toml
database/src/: control.rs  init.rs  lib.rs  model.rs  winners.rs
openai/: Cargo.toml
openai/src/: character.rs  helper.rs  lib.rs
src/: main.rs
telegram/: Cargo.toml
telegram/src/: command.rs  commands.rs  handler.rs  lib.rs
telegram/src/commands/: answer.rs  gpt.rs  info.rs  mod.rs  question.rs  requests.rs  winners.rs
