[package]
name = "project"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "database",
    "config"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = {path="database/"}
config = {path="config/"}
log = "0.4.19"
pretty_env_logger = "0.5.0"
tokio = { version = "1.29.1", features = ["full"] }
chrono = "0.4.26"
