[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.179"
serde_derive = "1.0.180"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
