[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
chrono = "0.4.26"
lazy_static = "1.4.0"
log = "0.4.19"
once_cell = "1.18.0"
runtime-tokio = "0.0.0"
rusqlite = "0.29.0"
tokio = { version = "1.29.1", features = ["full"] }
