[package]
name = "openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
tokio = { version = "1.29.1", features = ["full"] }
config = {path = "../config"}
async-openai = "0.14.3"
chrono = "0.4.26"
