[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
teloxide = "0.12.2"
teloxide-macros = "0.7.0"
tokio = { version = "1.29.1", features = ["full"] }
config = {path = "../config"}
openai = {path = "../openai"}
database = {path = "../database"}